backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - image: igeolise/k8s-task-backend:1.0.0
          name: backendApp
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: backendService
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: backend
